test/src/e2e_vm_tests/test_programs/should_pass/language/associated_const_trait_default/src/main.sw
script;

trait ConstantId {
    const ID: u32 = 1;
}

struct Struct {}

impl ConstantId for Struct {
  const ID: u32 = 5;
}

fn main() -> u32 {
  Struct::ID
}
