test/src/e2e_vm_tests/test_programs/should_fail/trait_associated_const_access/src/main.sw
script;

trait ConstantId {
    const ID: u32 = 0;
}

fn main() -> u32 {
  ConstantId::ID
}
